Fixed testimonial section not centered on desktop.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,9 @@
 body {
   background-color: $color-neutral-blue;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .testimonials {
@@ -26,21 +29,21 @@ body {
     gap: 1rem;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: 
-    "daniel daniel jonathan"
-    "jeanette patrick patrick"
-    "kira kira kira";
+    grid-template-areas:
+      "daniel daniel jonathan"
+      "jeanette patrick patrick"
+      "kira kira kira";
   }
-  
+
   @media screen and (width > 1024px) {
     display: grid;
     width: 90%;
     gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: 
-    "daniel daniel jonathan kira"
-    "jeanette patrick patrick kira";
+    grid-template-areas:
+      "daniel daniel jonathan kira"
+      "jeanette patrick patrick kira";
   }
 }
 
@@ -49,7 +52,7 @@ body {
   flex-direction: row;
   justify-content: center;
   color: $color-dark-blue;
-  margin-block-end: 1rem;
+  margin-block: 2rem;
 }
 
 a {
